--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   padding: 20px;
   min-height: 100vh;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
