--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .game-board {
-  width: 80%;
+  /* width: 80%; */
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
