css changed card size 18vh

--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ body {
 }
 
 .card img {
-  max-width: 100%;
-  height: auto;
+  max-height: 18vh;
+  width: auto;
   object-fit: contain;
   padding: 5px;
 }
