--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 15px;
-  padding: 15px;
+  gap: 5px;
+  /* padding: 15px; */
 }
 
 .card {
