--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "Times New Roman", Times, serif;
   text-align: center;
   color: #170483;
-  background-color: #aaaaaa;
+  background-color: #e1e1e1;
   margin: 0;
   padding: 20px;
   min-height: 100vh;
